# material-agents

./: .gitignore  README.md  main.py  pyproject.toml  sandbox.ipynb
agents/: csv_to_graph.py
services/: llm_factory.py
utils/: database_accessor.py  duckdb_helpers.py
